--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -60,12 +60,6 @@
 
 
 
-
-.link:hover {
-	font-weight: 600;
-	color: rgba(233, 190, 89);
-}
-
 .registerContainer {
 	display: flex;
 	margin-bottom: 10px;
@@ -83,4 +77,19 @@
 .logoutSection {
 	display: flex;
 	align-items: center;
+}
+
+.headerIcons {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	width: 12vw;
+}
+
+.unhideIcon {
+	cursor: pointer;
+}
+
+.unhideIcon:hover {
+	opacity: 0.6;
 }
